--- a/StudentManagementSystem/Src/WebApp/Views/Shared/_Layout.cshtml
+++ b/StudentManagementSystem/Src/WebApp/Views/Shared/_Layout.cshtml
@@ -26,16 +26,16 @@
                         <ul class="nav navbar-nav">
                             <li class="active"><a href="/">Home</a></li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Schools<b class="icon-angle-down"></b></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Schools<b class="icon-angle-down"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="typography.html">Curriculum</a></li>
-                                    <li><a href="components.html">Calendar</a></li>
-                                    <li><a href="pricingbox.html">Pricing</a></li>
+                                    <li><a href="/Curriculum">Curriculum</a></li>
+                                    <li><a href="/Calendar">Calendar</a></li>
+                                    <li><a href="/Pricing">Pricing</a></li>
                                 </ul>
                             </li>
-                            <li><a href="portfolio.html">About</a></li>
-                            <li><a href="blog.html">FAQ</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="/About">About</a></li>
+                            <li><a href="/Faq">FAQ</a></li>
+                            <li><a href="/Contact">Contact</a></li>
                             <li><a class="fa fa-user" style="font-size: 1em" href="/Manage" aria-hidden="true"></a></li>
                         </ul>
                     </div>
