--- a/StudentManagementSystem/Src/WebApp/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/StudentManagementSystem/Src/WebApp/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model StudentManagementSystem.Web.Models.ExternalLoginConfirmationViewModel
+﻿@model StudentManagementSystem.Data.ViewModels.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
