--- a/StudentManagementSystem/Src/WebApp/Views/Account/ForgotPassword.cshtml
+++ b/StudentManagementSystem/Src/WebApp/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model StudentManagementSystem.Web.Models.ForgotPasswordViewModel
+﻿@model StudentManagementSystem.Data.ViewModels.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
