--- a/StudentManagementSystem/Src/WebApp/Views/Account/Login.cshtml
+++ b/StudentManagementSystem/Src/WebApp/Views/Account/Login.cshtml
@@ -1,5 +1,5 @@
-﻿@using StudentManagementSystem.Web.Models
-@model StudentManagementSystem.Web.Models.LoginViewModel
+﻿@using StudentManagementSystem.Data.ViewModels
+@model StudentManagementSystem.Data.ViewModels.LoginViewModel
 @{
     ViewBag.Title = "Log in";
 }
