--- a/StudentManagementSystem/Src/WebApp/Views/Account/Register.cshtml
+++ b/StudentManagementSystem/Src/WebApp/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model StudentManagementSystem.Web.Models.RegisterViewModel
+﻿@model StudentManagementSystem.Data.ViewModels.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
