--- a/StudentManagementSystem/Src/WebApp/Views/Account/ResetPassword.cshtml
+++ b/StudentManagementSystem/Src/WebApp/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model StudentManagementSystem.Web.Models.ResetPasswordViewModel
+﻿@model StudentManagementSystem.Data.ViewModels.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
