--- a/StudentManagementSystem/Src/WebApp/Views/Account/SendCode.cshtml
+++ b/StudentManagementSystem/Src/WebApp/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model StudentManagementSystem.Web.Models.SendCodeViewModel
+﻿@model StudentManagementSystem.Data.ViewModels.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
