--- a/StudentManagementSystem/Src/WebApp/Views/Account/VerifyCode.cshtml
+++ b/StudentManagementSystem/Src/WebApp/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model StudentManagementSystem.Web.Models.VerifyCodeViewModel
+﻿@model StudentManagementSystem.Data.ViewModels.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
