--- a/StudentManagementSystem/Src/WebApp/Views/Manage/AddPhoneNumber.cshtml
+++ b/StudentManagementSystem/Src/WebApp/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model StudentManagementSystem.Web.Models.AddPhoneNumberViewModel
+﻿@model StudentManagementSystem.Data.ViewModels.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
