--- a/StudentManagementSystem/Src/WebApp/Views/Manage/ChangePassword.cshtml
+++ b/StudentManagementSystem/Src/WebApp/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model StudentManagementSystem.Web.Models.ChangePasswordViewModel
+﻿@model StudentManagementSystem.Data.ViewModels.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
