--- a/StudentManagementSystem/Src/WebApp/Views/Manage/Index.cshtml
+++ b/StudentManagementSystem/Src/WebApp/Views/Manage/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNet.Identity
-@model StudentManagementSystem.Web.Models.IndexViewModel
+@model StudentManagementSystem.Data.ViewModels.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
