--- a/StudentManagementSystem/Src/WebApp/Views/Manage/ManageLogins.cshtml
+++ b/StudentManagementSystem/Src/WebApp/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model StudentManagementSystem.Web.Models.ManageLoginsViewModel
+﻿@model StudentManagementSystem.Data.ViewModels.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
