--- a/StudentManagementSystem/Src/WebApp/Views/Manage/SetPassword.cshtml
+++ b/StudentManagementSystem/Src/WebApp/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model StudentManagementSystem.Web.Models.SetPasswordViewModel
+﻿@model StudentManagementSystem.Data.ViewModels.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
