--- a/StudentManagementSystem/Src/WebApp/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/StudentManagementSystem/Src/WebApp/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model StudentManagementSystem.Web.Models.ExternalLoginListViewModel
+﻿@model StudentManagementSystem.Data.ViewModels.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
