--- a/StudentManagementSystem/Src/WebApp/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/StudentManagementSystem/Src/WebApp/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model StudentManagementSystem.Web.Models.VerifyPhoneNumberViewModel
+﻿@model StudentManagementSystem.Data.ViewModels.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
