--- a/StudentManagementSystem/Src/WebApp/Views/Shared/AngularScripts.cshtml
+++ b/StudentManagementSystem/Src/WebApp/Views/Shared/AngularScripts.cshtml
@@ -1,12 +1,15 @@
 ﻿<!-- 1. Load libraries -->
 <!-- Polyfill(s) for older browsers -->
-<script src="node_modules/core-js/client/shim.min.js"></script>
+@*<script src="node_modules/core-js/client/shim.min.js"></script>
 
 <script src="node_modules/zone.js/dist/zone.js"></script>
 <script src="node_modules/reflect-metadata/Reflect.js"></script>
 <script src="node_modules/systemjs/dist/system.src.js"></script>
-<script src="node_modules/rxjs/bundles/rx.js"></script>
+<script src="node_modules/rxjs/bundles/rx.js"></script>*@
 
+<script src="/node_modules/core-js/client/shim.min.js"></script>
+<script src="/node_modules/zone.js/dist/zone.js"></script>
+<script src="/node_modules/systemjs/dist/system.src.js"></script>
 
 <!-- 2. Configure SystemJS -->
-<script src="systemjs.config.js"></script>
+<script src="/systemjs.config.js"></script>
