--- a/StudentManagementSystem/Src/WebApp/Views/Shared/_Layout.cshtml
+++ b/StudentManagementSystem/Src/WebApp/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>@ViewBag.Title - @Application.ApplicationName</title>
+    <base href="/">
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     @Styles.Render("~/Content/Themes/Moderna/css")
@@ -25,10 +26,11 @@
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
                             <li class="active"><a href="/">Home</a></li>
+                            <li><a routerLink="/marketing/schools" routerLinkActive="active" href="/marketing/schools">Schools</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Schools<b class="icon-angle-down"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="/Curriculum">Curriculum</a></li>
+                                    <li><a href="/Curriculum" routerLink="/marketing/schools" routerLinkActive="active">Curriculum</a></li>
                                     <li><a href="/Calendar">Calendar</a></li>
                                     <li><a href="/Pricing">Pricing</a></li>
                                 </ul>
