fixing the views

--- a/StudentManagementSystem/Src/WebApp/App/components/marketing/schools-list.view.html
+++ b/StudentManagementSystem/Src/WebApp/App/components/marketing/schools-list.view.html
@@ -1,9 +1,15 @@
 ﻿<h1>{{title}}</h1>
 <ul class="schools">
     <li *ngFor="let school of schools" (click)="onSelect(school)" [class.selected]="school === selected">
-        <span class="school-element">
-            <span class="badge">{{school.id}}</span> {{school.name}}
-        </span>
+        <div class="school-element">
+            <h3 id="{{school.id}}">{{school.name}}</h3>
+            <p>
+                {{school.address.building}}<br/>
+                {{school.address.street}}<br/>
+                {{school.address.city}}, {{school.address.state}} {{school.address.zipcode}}<br />
+
+            </p>
+        </div>
     </li>
 </ul>
 
